# objective-turk

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
examples/: create_html_test.py  create_test.py
objective_turk/: __init__.py  color_logs.py  create_db.py  create_hit.py  models_bad.py  objective_turk.py
ot/: __init__.py
